css/styles.css
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: 0;
          box-sizing: 0;
}

html {
  font-size: 62.5%;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  font-family: "Alegreya Sans", sans-serif;
  scrollbar-width: none;
  -ms-overflow-style: none;
}
html::-webkit-scrollbar {
  display: none;
}

body {
  font-size: 2rem;
  font-weight: 200;
  -webkit-font-kerning: none;
          font-kerning: none;
  line-height: 150%;
}
body .background__ {
  width: 100%;
  height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background-image: url("https://bl3302files.storage.live.com/y4mA116mdkaAVTVVkfuhp0mNAH_MoJyYG8826lDFR5iBHQl1NkQaLcm9ZR1O73PbgecwdcNQxic36KP2y4gYkLr4veNoxm7jcRObH7gUquGzIt_4bwRAizLzzyxWEZswGhMtANmNrd0DY6px43jGjoxoRR1QNoY6jIwbiLOU1dM3d2jc1LtBTbaQPU_bDGuqOQK?width=1024&height=701&cropmode=none");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  z-index: 0;
}

.blog-button {
  max-width: 350px;
  height: auto;
  margin: 35px 0px;
  padding: 25px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-grid-column-align: center;
      justify-self: center;
  text-align: left;
  border: none;
  border-radius: 20px;
  line-height: 125%;
  -webkit-box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.507);
          box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.507);
  background-color: rgba(241, 241, 241, 0.747);
  -webkit-transition: 0.5s;
  transition: 0.5s;
  font-size: 1.8rem;
}
.blog-button p {
  font-style: italic;
  font-weight: 300;
}
.blog-button:hover {
  -webkit-transition: -webkit-transform 0.6s;
  transition: -webkit-transform 0.6s;
  transition: transform 0.6s;
  transition: transform 0.6s, -webkit-transform 0.6s;
  -webkit-transform: scale(1.048) perspective(1px);
          transform: scale(1.048) perspective(1px);
}

.git_but {
  -webkit-transition: 0.5s;
  transition: 0.5s;
}
.git_but:hover {
  -webkit-transition: -webkit-transform scale(0.6);
  transition: -webkit-transform scale(0.6);
  transition: transform scale(0.6);
  transition: transform scale(0.6), -webkit-transform scale(0.6);
  -webkit-transform: scale(1.048) perspective(1px);
          transform: scale(1.048) perspective(1px);
}

.note {
  margin: 30px 0px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.note--content {
  width: 60%;
  max-width: 800px;
  height: auto;
  padding: 20px 30px;
  border-radius: 25px;
  background-color: #d7eaf8;
}

.hero {
  width: 100%;
  height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}
.hero__content {
  margin-top: 50px;
  z-index: 1;
  width: 80%;
  max-width: 1250px;
  height: auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  color: white;
  border-left: 5px solid white;
  padding-left: 20px;
  -webkit-box-ordinal-group: 2;
      -ms-flex-order: 1;
          order: 1;
}
.hero__content .hero--title {
  margin-bottom: 20px;
  font-size: 6rem;
  font-weight: 700;
  text-shadow: 0px 0px 30px #28a8fd;
  line-height: 120%;
}
.hero__content .hero--title span {
  text-shadow: none;
}
.hero__content .blink {
  -webkit-animation: blink-animation 2s steps(5, start) infinite;
          animation: blink-animation 2s steps(5, start) infinite;
}
@-webkit-keyframes blink-animation {
  to {
    visibility: hidden;
  }
}
@keyframes blink-animation {
  to {
    visibility: hidden;
  }
}
.hero__content .hero--description {
  font-size: 2rem;
  font-weight: 400;
  font-style: italic;
}
.hero__content .print {
  line-height: 250%;
  color: greenyellow;
  font-family: monospace;
}
.hero__content .print .bracket {
  color: white;
  font-weight: 600;
}
.hero__content .print .comma {
  color: #ce400c;
  font-weight: 600;
}
.hero__content .print-hello {
  color: white;
  font-size: 2.5rem;
}
.hero__social {
  width: 80%;
  height: 100px;
  margin-top: 50px;
  z-index: 1;
  -webkit-box-ordinal-group: 3;
      -ms-flex-order: 2;
          order: 2;
}
.hero__social ul, .hero__social li {
  list-style: none;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}
.hero__social a {
  width: 100px;
  height: 100px;
  background-size: 60px;
  -webkit-transition: -webkit-transform 0.6s;
  transition: -webkit-transform 0.6s;
  transition: transform 0.6s;
  transition: transform 0.6s, -webkit-transform 0.6s;
}
.hero__social a:hover {
  -webkit-transition: -webkit-transform 0.6s;
  transition: -webkit-transform 0.6s;
  transition: transform 0.6s;
  transition: transform 0.6s, -webkit-transform 0.6s;
  -webkit-transform: scale(1.2) rotate(-15deg);
          transform: scale(1.2) rotate(-15deg);
}
.hero__social .twitter-icon {
  background-image: url("https://bl3302files.storage.live.com/y4m6v3Fm_7Z41Avv2ctiPjUHevrFrNvUAbyAw9q-QvbeiuHnrrC6DgCLSE-cvnKYWodU-kzsj8bLLz0LjwKXBFRMOPjUyUfR6upuTBxwj-dvQ7PhWex9CVNFns-A8NSioHyermFcKADkf9tR5evtl--8WWzxJp43ht-5YVGvuNV9fNCYgtjWcPnQ0wqHHWmykkR?width=244&height=244&cropmode=none");
  background-position: center;
  background-repeat: no-repeat;
}
.hero__social .linkedIn-icon {
  background-image: url("https://bl3302files.storage.live.com/y4m1UmzI4ffa3UJX98gH8YDDDF77Kkx3a6f-UScmHoGlTzUsu2WMARmnyrzutaTPiwFkzAOqYlpl-YslE_mPT2i0pTtl-S1AkT5PZeGJQd6jGRGMsKByCOhageYgoQLCSJRZpcShEeIfJ7KaHFGeKRUzkaCPjU58ETyeRGK8g_hppDnbpCNT_hzCK148ituzdcC?width=244&height=244&cropmode=none");
  background-position: center;
  background-repeat: no-repeat;
}
.hero__social .github-icon {
  background-image: url("https://bl3302files.storage.live.com/y4mU39DJn6i8CjdkCtFgZalPOzavNOaR7LGAJ6Xo908-Gk-I9KBHdkeMc_iottO_PaQEGBT-JPDk6hY6E6gFKyMiJll83xD70kzl934MWaOL6hNbfAFLVbmqv4hd1jCvWUUVeU8nKV75UBN0J7dfTG6CMvU9DSxPtmWJq3Gb8WOT2So-EjtvaVGn0KdTul5LQ7N?width=243&height=243&cropmode=none");
  background-position: center;
  background-repeat: no-repeat;
}

